tests/ui/traits/new-solver/specialization-transmute.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/specialization-transmute.rs:3:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0284]: type annotations needed
  --> $DIR/specialization-transmute.rs:15:23
   |
LL |     fn intu(&self) -> &Self::Id {
   |                       ^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `<T as Default>::Id == _`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0284`.
